tests/error/modifier_errors/pytket_w_collapse.err
Error: Unitary constraint violation (at $FILE:13:4)
   | 
11 | @guppy(unitary=True)
12 | def foo(q: qubit) -> None:
13 |     guppy_circ(q)
   |     ^^^^^^^^^^^^^ This function cannot be called in a unitary context

Help: The function `guppy_circ` corresponds to a pytket circuit containing a non
unitary operation, which is not allowed in a unitary context.

Guppy compilation failed due to 1 previous error
